# fsig

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_x64.bat  cmake.bat
include/: Constants.hpp  ExceptionManager.hpp  IReader.hpp  IWriter.hpp  Params.hpp  SequentialFileWriter.hpp  Signature.hpp  TextFileReader.hpp  ThreadPool.hpp  Worker.hpp
source/: Constants.cpp  CycleWorker.cpp  CycleWorker.hpp  ExceptionManager.cpp  Hasher.cpp  Hasher.hpp  IDataProcessor.hpp  IReader.hpp  Params.cpp  Params.hpp  SequentialFileWriter.cpp  SequentialFileWriter.hpp  Signature.cpp  Signature.hpp  TextFileReader.cpp  TextFileReader.hpp  ThreadPool.cpp  ThreadPool.hpp  main.cpp
